
syntax = "proto3";

package stovk;
option  java_multiple_files=true;
option java_package="com.java.grpc";
option  java_outer_classname="Stock";


service StockTradingService{

  // UNARY -
  rpc getStockPrice(StockRequest) returns (StockResponse);

  //server streaming
rpc getStreamStockprice(StockRequest) returns (stream StockResponse);
}


message StockRequest{
  string stock_symbol=1;
}

message StockResponse{
  string stock_symbol=1;
  double price=2;
  string timestamp=3;

}